--- a/Restaurant.Booking/Restaurant.Booking.csproj
+++ b/Restaurant.Booking/Restaurant.Booking.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Restaurant.Notification\Restaurant.Notification.csproj" />
+  </ItemGroup>
+
 </Project>
