--- a/Restaurant.Booking/Restaurant.Booking.csproj
+++ b/Restaurant.Booking/Restaurant.Booking.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Messaging\Messaging.csproj" />
     <ProjectReference Include="..\Restaurant.Notification\Restaurant.Notification.csproj" />
   </ItemGroup>
 
