--- a/Restaurant.Booking/Restaurant.Booking.csproj
+++ b/Restaurant.Booking/Restaurant.Booking.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -8,8 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Messaging\Messaging.csproj" />
-    <ProjectReference Include="..\Restaurant.Notification\Restaurant.Notification.csproj" />
+    <ProjectReference Include="..\Restaurant.Messaging\Restaurant.Messaging.csproj" />
   </ItemGroup>
 
 </Project>
