--- a/Restaurant.Notification/Restaurant.Notification.csproj
+++ b/Restaurant.Notification/Restaurant.Notification.csproj
@@ -9,11 +9,10 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
-    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Messaging\Messaging.csproj" />
+    <ProjectReference Include="..\Restaurant.Messaging\Restaurant.Messaging.csproj" />
   </ItemGroup>
 
 </Project>
